# mailResolve

./: .env.example  .gitignore  Procfile  README.md  app.json  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  estructura.md  pyproject.toml  railway.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py
src/api/: deps.py  main.py  users.py
src/api/routes/: auth.py  health.py  logs.py  rules.py  sync.py  webhooks.py
src/classifier/: features.py  groq_classifier.py  pipeline.py  rule_validation.py  rules_engine.py  seed_rules.py
src/cli/: main.py  rules_prompt.py
src/core/: config.py  security.py
src/gmail/: actions.py  client.py  oauth.py  sync.py  watch.py
src/models/: __init__.py  database.py
src/schemas/: __init__.py
src/worker/: celery_app.py  tasks.py
tests/: conftest.py  test_cli_logs.py  test_cli_rules.py  test_cli_sync.py  test_config.py  test_features.py  test_gmail_sync.py  test_groq_classifier.py  test_health.py  test_models.py  test_pipeline.py  test_rule_validation.py  test_rules_api.py  test_rules_engine.py  test_seed_rules.py  test_sync_api.py  test_webhooks.py
