[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailresolve"
version = "0.1.0"
description = "Automated Gmail triage with rules and LLM fallback"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "celery[redis]>=5.4.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "google-api-python-client>=2.154.0",
    "google-auth-oauthlib>=1.2.1",
    "groq>=0.13.0",
    "pydantic-settings>=2.6.0",
    "cryptography>=43.0.0",
    "typer[all]>=0.15.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
mailresolve = "src.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
